# Swizzle

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh
_cmake/: FindObjectGraph.cmake  FindPluginFactory.cmake  FindUsingIntrusivePtrIn.cmake  FindWield.cmake  config.cmake  dependencies.cmake
_cmake/compilers/: clang.cmake
_cmake/dependencies/: Boost.cmake  ObjectGraph.cmake  PluginFactory.cmake  UsingIntrusivePtrIn.cmake  Wield.cmake
_docs/: SwizzleLanguage.md
_docs/_graffle/: Parser.graffle  Tokenizer.graffle
_keys/: brip_release_key.pub
_notes/: SwizzleLanguage  SwizzleLanguage.md
plugins/: CMakeLists.txt
plugins/print/: Print.cpp  Print.hpp  PrintVisitor.cpp  PrintVisitor.hpp
swizzle/: CMakeLists.txt  Exceptions.hpp  IsFloatType.hpp  IsIntegerType.hpp  IsKeyword.hpp  IsType.hpp  IsUnsignedIntegerType.hpp
swizzle/ast/: AbstractSyntaxTree.hpp  AbstractTreeEdgeVisitorInterface.hpp  AbstractTreeVertexVisitorInterface.hpp  AbstractTreeVisitorInterface.hpp  AncestorInfo.hpp  DefaultVisitor.hpp  Depth.hpp  Edge.hpp  MatchRule.hpp  Matcher.hpp  MatcherReferenceHolder.hpp  Node.hpp  VariableBindingInterface.hpp  Vertex.hpp  VisitorInterface.hpp
swizzle/backend/: BackendInterface.hpp  SwizzleService.hpp
swizzle/lexer/: FileInfo.hpp  LineInfo.hpp  ResetToken.hpp  Token.hpp  TokenInfo.hpp  TokenProducer.hpp  TokenType.hpp  Tokenizer.hpp  TokenizerState.hpp  TokenizerStateInterface.hpp  TokenizerStatesPack.hpp
swizzle/parser/: EnumValue.hpp  EnumValueType.hpp  NodeStack.hpp  Parser.hpp  ParserState.hpp  TokenList.hpp  (+5 more)
swizzle_cli/: CMakeLists.txt
(+468 files in other folders)
